examples/type_system/failing/158_match_tuple_guarded_only_non_exhaustive.flx
fn main() -> Unit {
    let t = (1, true)
    let _x = match t {
        (a, b) if a > 0 && b -> 1,
    }
}
